# paper

./: Cargo.toml
examples/: app.rs  logo.rs
src/: app.rs  lib.rs  primary_pipeline.rs  render.rs  renderer.rs  transform.rs
src/shaders/: primary.wgsl
