[package]
name = "paper"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
bytemuck = "1.7.2"
futures = "0.3.16"
glam = { version = "0.17.3", features = ["bytemuck"] }
log = "0.4.14"
scissor = { path = "../scissor/", features = ["bytemuck"] }
simple_logger = "1.12.0"
wgpu = "0.9.0"
winit = "0.25.0"

